--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,5 @@ jobs:
         run: |
               pip install -r requirements.txt
               python train.py
+              echo "Model Metrics"
+              cat metrics.txt
