--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,14 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-              pip install -r requirements.txt
-              python train.py
-              echo "##Model Metrics" > report.md
-              cat metrics.txt >> report.md
-              
-              cml-publish feature_importance.png --md >> report.md
-              cml-publish residuals.png --md >> report.md
-              
-              cml-send-comment report.md
+          pip install -r requirements.txt
+          python train.py
+          
+          echo "## Model metrics" > report.md
+          cat metrics.txt >> report.md
+          
+          echo "## Data viz" >> report.md
+          cml-publish feature_importance.png --md >> report.md
+          cml-publish residuals.png --md >> report.md
+          
+          cml-send-comment report.md
