--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env:
+          repo_token: ${{secrets.GITHUB_TOKEN}} 
         run: |
           pip install -r requirements.txt
           python train.py
